# cpp-optimizations-lab

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
lifetime-lab/: README.md  lifetime.hpp  lifetime_RVO_lab.hpp  lifetime_class_lab.hpp  lifetime_complex_return_type_lab.hpp  lifetime_lambda_lab.hpp  main.cpp
object-size-lab/: main.cpp  ordering_lab.hpp
stl_data_structures/: CMakeLists.txt  lookup_table.cpp  lookup_table.md
utils/: logger.hpp
